--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CLOUD_NAME=dufaxwlm2
 CLOUD_API_KEY=265868342979389
 CLOUD_API_SECRET=68gDAhRbewr0wUcICiwH-EZV3mI
+
+DB_URI=mongodb+srv://mohdsaddam:FGOYBQaNS6j6H4L6@cluster0.lkmkwdh.mongodb.net/?
